<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/note_title"
        style="@style/item_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <View
        android:id="@+id/note_divider"
        style="@style/divider"
        android:layout_width="match_parent"
        android:background="@color/material_drawer_divider"
        app:layout_constraintTop_toBottomOf="@id/note_title" />

    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_divider" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/note_btn_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/large_margin"
        android:src="@drawable/ic_about"
        android:visibility="gone"
        android:backgroundTint="@color/nord3"
        android:text="@string/btn_open_link"/>

</androidx.constraintlayout.widget.ConstraintLayout>